--- a/doc/Esterni/Glossario/Glossario_1_0_0.tex
+++ b/doc/Esterni/Glossario/Glossario_1_0_0.tex
@@ -6,10 +6,11 @@
 \version{1.0.0}
 \creaz{27 dicembre 2016}
 \author{\ALL}
-\supervisor{?}
+\supervisor{\LS}
 \uso{esterno}
 \dest{\ALL, \TV, \RC, \GP}
 \title{Glossario}
+\date{9 gennaio 2017}
 
 \begin{document}
 \maketitle
