--- a/doc/Esterni/Piano_di_qualifica/Piano_di_qualifica_0_0_0.tex
+++ b/doc/Esterni/Piano_di_qualifica/Piano_di_qualifica_0_0_0.tex
@@ -2,13 +2,14 @@
 % da compilare con il comando pdflatex Piano_di_Qualifica_x.x.x.tex
 
 \input{../../util/hx-ambiente}
+\usepackage{float}
 
 \version{0.0.1}
 \creaz{28 dicembre 2016}
 \author{\LS, \AZ}
 \supervisor{\GG}
 \uso{esterno}
-\dest{\TV, \ZU}
+\dest{\TV, \RC, \ZU}
 \title{Piano di Qualifica}
 
 \begin{document}
@@ -33,13 +34,13 @@
 			\item \emph{\NdP};
 			\item \textbf{Capitolato d'Appalto C6: \proj}:
 			\\ \url{http://www.math.unipd.it/~tullio/IS-1/2016/Progetto/C6p.pdf};
-			\item \textbf{Standard ISO/IEC 12207:2008:}
+			\item \textbf{Standard ISO/IEC 12207:2008}:
 			\\ \url{http://ieeexplore.ieee.org/document/4475826/};
-			\item \textbf{Standard ISO/IEC 15504:}
+			\item \textbf{Standard ISO/IEC 15504}:
 			\\ \url{https://en.wikipedia.org/wiki/ISO/IEC_15504};
-			\item \textbf{Standard ISO/IEC 9126:}
+			\item \textbf{Standard ISO/IEC 9126}:
 			\\ \url{https://it.wikipedia.org/wiki/ISO/IEC_9126};
-			\item \textbf{PDCA(Plan-Do-Check-Act):}
+			\item \textbf{PDCA(Plan-Do-Check-Act)}:
 			\\ \url{https://it.wikipedia.org/wiki/Ciclo_di_Deming}.
 		\end{itemize}
 		
@@ -48,13 +49,13 @@
 			\item \textbf{Analisi dei Requisiti: }\emph{\AdR};
 			\item \textbf{Piano di Progetto: }\emph{\PdP};
 			\item \textbf{Glossario: }\emph{\Glossario};
-			\item \textbf{Indice di Gulpease:}
+			\item \textbf{Indice di Gulpease}:
 			\\ \url{http://it.wikipedia.org/wiki/Indice_Gulpease};
-			\item \textbf{Regole del Progetto Didattico:}
+			\item \textbf{Regole del Progetto Didattico}:
 			\\ \url{http://www.math.unipd.it/~tullio/IS-1/2016/Dispense/L09.pdf};
-			\item \textbf{Slide Qualità del Software:}
+			\item \textbf{Slide Qualità del Software}:
 			\\ \url{http://www.math.unipd.it/~tullio/IS-1/2016/Dispense/L10.pdf};
-			\item \textbf{Slide Qualità del Prodotto:}
+			\item \textbf{Slide Qualità del Prodotto}:
 			\\ \url{http://www.math.unipd.it/~tullio/IS-1/2016/Dispense/L11.pdf}.
 		\end{itemize}
 \newpage
@@ -72,53 +73,53 @@
 		 \item \textbf{Livello 1: Attuato} il processo è implementato e raggiunge il suo obiettivo; esiste evidenza di semplice attuazione delle attività 			che lo compongono.
 		Il relativo attributo di processo:
 			\begin{itemize}
-				\item \emph{Esecuzione del Processo:} la misura in cui il processo raggiunge i propri obiettivi trasformando   prodotti in ingresso 						identificabili in prodotti in uscita identificabili.
+				\item \emph{Esecuzione del Processo}: la misura in cui il processo raggiunge i propri obiettivi trasformando   prodotti in ingresso 						identificabili in prodotti in uscita identificabili.
 			\end{itemize}
 		\item \textbf{Livello 2: Gestito} il processo è gestito e i suoi prodotti sono stabiliti, controllati e manutenuti; le attività sono pianificate e 			controllate e il loro svolgimento risulta documentato.
 		I relativi attributi di processo:
 			\begin{itemize}
-				\item \emph{Gestione delle Prestazioni:} la misura in cui il processo produce un risultato coerente con gli obiettivi attesi.
-				\item \emph{Gestione dei Prodotti:} la misura in cui il processo viene gestito per elaborare prodotti documentati, controllati e verificati in modo appropriato.
+				\item \emph{Gestione delle Prestazioni}: la misura in cui il processo produce un risultato coerente con gli obiettivi attesi.
+				\item \emph{Gestione dei Prodotti}: la misura in cui il processo viene gestito per elaborare prodotti documentati, controllati e verificati in modo appropriato.
 			\end{itemize}
  	
 		\item \textbf{Livello 3: Definito} il processo viene eseguito in base ai principi dell'ingegneria del software. Le procedure sono definite e adattate ai progetti e ruoli, competenze e responsabilità sono definiti e controllati.
 		I relativi attributi di processo:
 			\begin{itemize}
-				\item \emph{Definizione del Processo:} la misura in cui il processo raggiunge i risultati attesi aderendo ad un particolare standard di processo.
-				\item \emph{Utilizzo del Processo:} la misura in cui il processo attinge alle risorse allocate per la sua esecuzione.	
+				\item \emph{Definizione del Processo}: la misura in cui il processo raggiunge i risultati attesi aderendo ad un particolare standard di processo.
+				\item \emph{Utilizzo del Processo}: la misura in cui il processo attinge alle risorse allocate per la sua esecuzione.	
 			\end{itemize}
 			
 		\item \textbf{Livello 4: Predicibile} il processo è messo in atto costantemente entro limiti definiti. Le attività che lo compongono, la loro gestione e i relativi risultati sono controllati quantitativamente.
 		I relativi attributi di processo:
 			\begin{itemize}
-				\item \emph{Misurazione del Processo:} la misura in cui il processo utilizza i risultati raggiunti e le misure ricavate durante l'esecuzione per garantire il raggiungimento dei traguardi definiti.
-				\item \emph{Controllo del Processo:} la misura in cui il processo viene controllato tramite la raccolta, l'analisi e la messa in uso di misurazioni di prodotto e processo allo scopo di correggere, ove necessario, la sua esecuzione per raggiungere i risultati attesi.	
+				\item \emph{Misurazione del Processo}: la misura in cui il processo utilizza i risultati raggiunti e le misure ricavate durante l'esecuzione per garantire il raggiungimento dei traguardi definiti.
+				\item \emph{Controllo del Processo}: la misura in cui il processo viene controllato tramite la raccolta, l'analisi e la messa in uso di misurazioni di prodotto e processo allo scopo di correggere, ove necessario, la sua esecuzione per raggiungere i risultati attesi.	
 			\end{itemize}
 
 		\item \textbf{Livello 5: Ottimizzante} il processo è continuativamente migliorato per soddisfare i rilevanti traguardi di business attuali e previsti. I cambiamenti del processo sono valutati e lo studio per il miglioramento è un'attività costante.
 		I relativi attributi di processo:
 			\begin{itemize}
-				\item \emph{Innovazione del Processo:} la misura in cui cambiamenti relativi alla definizione, alla gestione e all'esecuzione del processo sono controllati per raggiungere gli obiettivi di business dell'organizzazione.
-				\item \emph{Ottimizzazione del Processo:} la misura in cui vengono identificati e implementati cambiamenti relativamente all'esecuzione del processo in modo tale da assicurare un miglioramento continuo nel raggiungimento degli obiettivi rilevanti dell'organizzazione.
+				\item \emph{Innovazione del Processo}: la misura in cui cambiamenti relativi alla definizione, alla gestione e all'esecuzione del processo sono controllati per raggiungere gli obiettivi di business dell'organizzazione.
+				\item \emph{Ottimizzazione del Processo}: la misura in cui vengono identificati e implementati cambiamenti relativamente all'esecuzione del processo in modo tale da assicurare un miglioramento continuo nel raggiungimento degli obiettivi rilevanti dell'organizzazione.
 			\end{itemize}
 		\end{itemize}
 
 	Ogni attributo di processo è misurabile e sono definiti dallo standard 4 diversi gradi di possesso:
 	\begin{itemize}
-		\item \textbf{N:} non posseduto (0\% - 15\%);
-		\item \textbf{P:} parzialmente posseduto (16\% - 50\%);
-		\item \textbf{L:} largamente posseduto (51\% - 85\%);
-		\item \textbf{F:} completamente posseduto (86\% - 100\%).
+		\item \textbf{N}: non posseduto (0\% - 15\%);
+		\item \textbf{P}: parzialmente posseduto (16\% - 50\%);
+		\item \textbf{L}: largamente posseduto (51\% - 85\%);
+		\item \textbf{F}: completamente posseduto (86\% - 100\%).
 	\end{itemize}
 
 	Le misurazioni e le valutazioni risultanti dal monitoraggio dei diversi processi sono usate nel contesto di una strategia di miglioramento continuo della qualità, realizzata attraverso il ciclo \gloss{PDCA}.
 	\\Il ciclo \gloss{PDCA}, altresì noto come ciclo di Deming, definisce un'organizzazione interna dei processi incentrata sul principio del miglioramento continuo allo scopo di renderli automigliorativi.
 	\\Le fasi in cui esso si articola sono quattro:
 		\begin{itemize}
-			\item \textbf{Pianificare (Plan):} in tale fase vengono definite attività, scadenze, responsabilità, risorse utili a raggiungere specifici obiettivi di miglioramento opportunamente pianificati.
-			\item \textbf{Eseguire (Do):} in questa fase vengono attuate le azioni migliorative pianificate al passo precedente. Si procede inoltre ad eseguire misurazioni e raccogliere dati utili per le successive fasi di analisi e controllo.
-			\item \textbf{Valutare (Check):} si tratta di una fase di verifica in cui l'esito delle azioni di miglioramento viene confrontato rispetto alle attese e agli obiettivi pianificati.
-			\item \textbf{Agire (Act):} se l'esito delle valutazioni effettuate al passo precedente risulta positivo, i cambiamenti introdotti nell'esecuzione del processo vengono incorporati stabilmente in esso e standardizzati.
+			\item \textbf{Pianificare (Plan)}: in tale fase vengono definite attività, scadenze, responsabilità, risorse utili a raggiungere specifici obiettivi di miglioramento opportunamente pianificati.
+			\item \textbf{Eseguire (Do)}: in questa fase vengono attuate le azioni migliorative pianificate al passo precedente. Si procede inoltre ad eseguire misurazioni e raccogliere dati utili per le successive fasi di analisi e controllo.
+			\item \textbf{Valutare (Check)}: si tratta di una fase di verifica in cui l'esito delle azioni di miglioramento viene confrontato rispetto alle attese e agli obiettivi pianificati.
+			\item \textbf{Agire (Act)}: se l'esito delle valutazioni effettuate al passo precedente risulta positivo, i cambiamenti introdotti nell'esecuzione del processo vengono incorporati stabilmente in esso e standardizzati.
 		\end{itemize}
 
 		\subsubsection{Procedure per il controllo della qualità di processo}
@@ -177,30 +178,30 @@
 		\end{enumerate}
 		Lo standard analizza la qualità del software sotto tre diversi punti di vista:
 		\begin{itemize}
-			\item \textbf{Qualità interna:} è la qualità del prodotto software che fa riferimento alle caratteristiche implementative del software come l'architettura e il codice derivante da quest'ultima.
-			\item \textbf{Qualità esterna:} è la qualità del prodotto software relativa a quando esso viene eseguito e testato in un ambiente di prova. 
-			\item \textbf{Qualità in uso:} è la qualità del prodotto software dal lato di chi utilizza tale prodotto all'interno di uno specifico sistema.
+			\item \textbf{Qualità interna}: è la qualità del prodotto software che fa riferimento alle caratteristiche implementative del software come l'architettura e il codice derivante da quest'ultima.
+			\item \textbf{Qualità esterna}: è la qualità del prodotto software relativa a quando esso viene eseguito e testato in un ambiente di prova. 
+			\item \textbf{Qualità in uso}: è la qualità del prodotto software dal lato di chi utilizza tale prodotto all'interno di uno specifico sistema.
 		\end{itemize}
 			\paragraph{Modello della qualità del software}
 			Nella prima parte dello standard vengono presentati i modelli per la qualità esterna, interna ed in uso.
 				\subparagraph{Modello della qualità esterna ed interna}
 				Il modello di qualità esterna ed interna sancito nella prima parte dello standard è suddiviso nelle seguenti sei caratteristiche generali misurabili attraverso delle metriche:
 				\begin{itemize}
-					\item \textbf{funzionalità:} è la capacità del software di fornire le funzioni che soddisfano determinate esigenze, necessarie per operare in determinate condizioni. 
-					\item \textbf{affidabilità:} rappresenta la capacità del prodotto software di mantenere uno specifico livello di prestazioni quando viene usato in certe condizioni e per un periodo di tempo determinato.
-					\item \textbf{usabilità:} è la capacità di un prodotto software di essere facilmente comprensibile e attraente in ogni sua parte per un utente qualsiasi. Un software è considerato usabile proporzionalmente alla facilità con cui un utente opera per sfruttare al massimo le funzionalità che il software mette a disposizione.
-					\item \textbf{efficienza:} è la capacità di un prodotto di eseguire le funzioni richieste nel minor tempo possibile ed utilizzando le risorse necessarie nel modo migliore.
-					\item \textbf{manutenibilità:} rappresenta la capacità di un prodotto software di essere modificato in tempi rapidi e a costi accessibili. Le modifiche possono riguardare correzioni o adattamenti del prodotto a variazioni negli ambienti, nei requisiti e nelle specifiche funzionali.
-					\item \textbf{portabilità:} è la capacità di un prodotto software di poter essere spostato da un ambiente all'altro velocemente. L'ambiente include sia aspetti hardware che software.
+					\item \textbf{funzionalità}: è la capacità del software di fornire le funzioni che soddisfano determinate esigenze, necessarie per operare in determinate condizioni. 
+					\item \textbf{affidabilità}: rappresenta la capacità del prodotto software di mantenere uno specifico livello di prestazioni quando viene usato in certe condizioni e per un periodo di tempo determinato.
+					\item \textbf{usabilità}: è la capacità di un prodotto software di essere facilmente comprensibile e attraente in ogni sua parte per un utente qualsiasi. Un software è considerato usabile proporzionalmente alla facilità con cui un utente opera per sfruttare al massimo le funzionalità che il software mette a disposizione.
+					\item \textbf{efficienza}: è la capacità di un prodotto di eseguire le funzioni richieste nel minor tempo possibile ed utilizzando le risorse necessarie nel modo migliore.
+					\item \textbf{manutenibilità}: rappresenta la capacità di un prodotto software di essere modificato in tempi rapidi e a costi accessibili. Le modifiche possono riguardare correzioni o adattamenti del prodotto a variazioni negli ambienti, nei requisiti e nelle specifiche funzionali.
+					\item \textbf{portabilità}: è la capacità di un prodotto software di poter essere spostato da un ambiente all'altro velocemente. L'ambiente include sia aspetti hardware che software.
 				\end{itemize}
 				
 				\subparagraph{Modello della qualità in uso}
 				Gli attributi presenti nel modello relativo alla qualità del software in uso sono rappresentati da quattro grandi categorie:
 				\begin{itemize}
-					\item \textbf{efficacia:} è la capacità di consentire all'utente di raggiungere obiettivi specifici con precisione e completezza.
-					\item \textbf{produttività:} rappresenta la capacità di permettere all'utente di utilizzare un numero stabilito di risorse, in relazione all'efficienza raggiunta in uno specifico contesto di utilizzo.
-					\item \textbf{sicurezza fisica:} è la capacità di raggiungere un livello accettabile di rischio di danni a dati, persone, proprietà o ambienti.
-					\item \textbf{soddisfazione:} rappresenta la capacità di soddisfare gli utenti.
+					\item \textbf{efficacia}: è la capacità di consentire all'utente di raggiungere obiettivi specifici con precisione e completezza.
+					\item \textbf{produttività}: rappresenta la capacità di permettere all'utente di utilizzare un numero stabilito di risorse, in relazione all'efficienza raggiunta in uno specifico contesto di utilizzo.
+					\item \textbf{sicurezza fisica}: è la capacità di raggiungere un livello accettabile di rischio di danni a dati, persone, proprietà o ambienti.
+					\item \textbf{soddisfazione}: rappresenta la capacità di soddisfare gli utenti.
 				\end{itemize}
 			\paragraph{Metriche per la qualità del software}
 			Nelle restanti tre parti vengono trattate le metriche per la qualità esterna, interna e in uso.
@@ -213,9 +214,9 @@
 		\subsubsection{Procedure per il controllo delle qualità di prodotto}
 		Il controllo di qualità del prodotto verrà garantito da:
 		\begin{itemize}
-			\item \textbf{quality assurance:} l'insieme di attività realizzate per garantire il raggiungimento degli obiettivi di qualità. Tali attività prevedono la realizzazione di tecniche di analisi statica e dinamica.
-			\item \textbf{verifica:} il processo che stabilisce se il prodotto in uscita da una fase è consistente, corretto e completo. Per tutta la durata del progetto verranno svolte attività di verifica.
-			\item \textbf{validazione:} la conferma oggettiva che il sistema soddisfa i requisiti.
+			\item \textbf{quality assurance}: l'insieme di attività realizzate per garantire il raggiungimento degli obiettivi di qualità. Tali attività prevedono la realizzazione di tecniche di analisi statica e dinamica.
+			\item \textbf{verifica}: il processo che stabilisce se il prodotto in uscita da una fase è consistente, corretto e completo. Per tutta la durata del progetto verranno svolte attività di verifica.
+			\item \textbf{validazione}: la conferma oggettiva che il sistema soddisfa i requisiti.
 		\end{itemize}
 		\subsubsection{Obiettivi di qualità del prodotto}
 		Gli obiettivi di qualità del software che il gruppo \hx{} desidera raggiungere nell'arco del progetto sono un sottoinsieme di quelli enunciati nello standard ISO/IEC 9126:2001:
@@ -254,8 +255,8 @@
 		\subsubsection{Misure}
 		Le misure raccolte relativamente alle metriche stabilite per valutare la qualità di processi e prodotti vengono rapportate ad una scala che ne stabilisce l'accettabilità o meno. \\In particolare per ogni metrica vengono indicati i seguenti due range:
 			\begin{itemize}
-				\item \textbf{Ottimale:} se il valore misurato rientra in tale range risulta accettabile e indica che l'oggetto sottoposto a verifica ha raggiunto pienamente gli obiettivi di qualità pianificati dal team. \\L'obiettivo è quello che tutti i valori raccolti rientrino all'interno di tale range.
-				\item \textbf{Accettabile:} se il valore misurato rientra in tale range risulta accettabile e indica che l'oggetto sottoposto a verifica ha raggiunto la soglia minima di qualità prevista dal gruppo.
+				\item \textbf{Ottimale}: se il valore misurato rientra in tale range risulta accettabile e indica che l'oggetto sottoposto a verifica ha raggiunto pienamente gli obiettivi di qualità pianificati dal team. \\L'obiettivo è quello che tutti i valori raccolti rientrino all'interno di tale range.
+				\item \textbf{Accettabile}: se il valore misurato rientra in tale range risulta accettabile e indica che l'oggetto sottoposto a verifica ha raggiunto la soglia minima di qualità prevista dal gruppo.
 			\\Risulta implicitamente che valori non rientranti nel range di accettabilità, perché eccessivamente bassi, non sono accettabili e richiedono immediate strategie correttive da parte del gruppo. Quest'ultime servono per porre rimedio agli errori rilevati e per garantire che la qualità del prodotto o processo possa rientrare almeno negli obiettivi di minimo previsti.		
 			\end{itemize}
 	
@@ -534,12 +535,12 @@ reale di fine di quell’attività: un valore di \textit{schedule variance} mino
 				\item Range di accettazione: 0-20;
 			\end{itemize}
 
-	\begin{table}
+	\begin{table}[H]\footnotesize
 	\begin{tabular}{|l|l|l|}
 	\hline
 	\textbf{Metriche} 						&\textbf{Range Accettazione} &\textbf{Range Ottimale} \\
 	\hline
-	\textbf{Metriche di Processo}					&				&\\
+	\multicolumn{3}{|l|}{\textbf{Metriche di Processo}}\\% & \multicolumn{2}{|l|}{}
 	\hline
 	~~Schedule variance 							&$\geq{-10}$\%	&$\geq{0}$\\
 	~~Budget variance 								&$\geq{-10}$\%	&$\geq{0}$\\
@@ -551,7 +552,7 @@ reale di fine di quell’attività: un valore di \textit{schedule variance} mino
 	~~Indice Gulpease								&40-100			&50-100\\
 	~~Copertura del codice							&40-100			&60-100\\
 	\hline
-	\textbf{Metriche di prodotto}					&				&\\
+	\multicolumn{3}{|l|}{\textbf{Metriche di prodotto}}\\% & \multicolumn{2}{|l|}{}
 	\hline
 	~~Copertura requisiti obbligatori				&100-100		&100-100\\
 	~~Copertura requisiti desiderabili				&40-100			&80-100\\
@@ -579,10 +580,10 @@ reale di fine di quell’attività: un valore di \textit{schedule variance} mino
 	\subsection{Tipi di test}
 	Sono stati individuati quattro tipologie di test:
 	\begin{itemize}
-		\item \textbf{Test di unità [TU]:} test con i quali si cerca di verificare la più piccola parte di lavoro prodotta da un programmatore, quali metodi e funzioni scritte;
-		\item \textbf{Test di integrazione [TI]:} test per verificare le componenti di sistema con l'obiettivo di verificare il funzionamento dei vari package prodotti, singolarmente o nel loro insieme;
-		\item \textbf{Test di sistema [TS]:} test con i quali si tenta di verificare che il funzionamento e il comportamento dell'architettura siano corretti;
-		\item \textbf{Test di accettazione [TA]:} test per verificare che il prodotto soddisfi le richieste del proponente.
+		\item \textbf{Test di unità [TU]}: test con i quali si cerca di verificare la più piccola parte di lavoro prodotta da un programmatore, quali metodi e funzioni scritte;
+		\item \textbf{Test di integrazione [TI]}: test per verificare le componenti di sistema con l'obiettivo di verificare il funzionamento dei vari package prodotti, singolarmente o nel loro insieme;
+		\item \textbf{Test di sistema [TS]}: test con i quali si tenta di verificare che il funzionamento e il comportamento dell'architettura siano corretti;
+		\item \textbf{Test di accettazione [TA]}: test per verificare che il prodotto soddisfi le richieste del proponente.
 	\end{itemize}
 	Si sottolinea che la specifica dei test delle diverse tipologie verrà inserita nel presente documento a seguito della fase di progettazione del prodotto in esame.
 
@@ -612,18 +613,18 @@ All'interno di questa sezione vengono riportati gli esiti delle attivit di verif
 		Le attività di verifica automatizzate, invece, sono state svolte calcolando l'indice Gulpease dei 	
 		diversi documenti prodotti attraverso l'uso di appositi strumenti web automatici. 
 		\\I risultati ottenuti sono elencati nella seguente tabella:
-		\begin{table}[h]
+		\begin{table}[H]
 		\begin{tabular}{|l|l|l|}
 		\hline
-		\textbf{Documento} 		&\textbf{Valutazione} &\textbf{Esito} \\
+		\textbf{Documento} 		&\textbf{Valutazione} &\textbf{~~~~~~Esito~~~~~~} \\
 		\hline
-		\PdQ 					&		&Superato\\
-		\NdP 					&		&Superato\\
-		\SdF 					&		&Superato\\	
-		\AdR 					&		&Superato\\
-		\PdQ 					&		&Superato\\
-		\Glossario 				&		&Superato\\
-		\textit{Verbali} 		&		&Superato\\
+		\PdQ 					&		&~~~~~~Superato~~~~~~\\
+		\NdP 					&		&~~~~~~Superato~~~~~~\\
+		\SdF 					&		&~~~~~~Superato~~~~~~\\	
+		\AdR 					&		&~~~~~~Superato~~~~~~\\
+		\PdQ 					&		&~~~~~~Superato~~~~~~\\
+		\Glossario 				&		&~~~~~~Superato~~~~~~\\
+		\textit{Verbali} 		&		&~~~~~~Superato~~~~~~\\
 		\hline
 		\end{tabular}
 		\caption{Esiti del calcolo dell'indice di Gulpease dei documenti consegnati}
@@ -632,7 +633,7 @@ All'interno di questa sezione vengono riportati gli esiti delle attivit di verif
 		\subsubsection{Verifica processo di pianificazione di progetto e processo di verifica e controllo}
 		Per verificare il soddisfacimento degli obiettivi di qualita definiti per tale procesoo, a partire dal 				consultivo redatto nel \PdP sono stati calcolati gli indici di budget variance e schedule variance per 				ogniuna delle attività previste.
 		\\I risultati ottenuti sono elencati nella seguente tabella:	
-		\begin{table}[h]
+		\begin{table}[H]
 		\begin{tabular}{|l|l|l|}
 		\hline
 		\textbf{Documento} 		&\textbf{Schedule variance} &\textbf{Budget variance} \\
